--- a/src/styles/slides/_home-feature.sass
+++ b/src/styles/slides/_home-feature.sass
@@ -206,6 +206,23 @@
       &.trans-out.bottom .content
         transform: translate3d(0,-24px,0)
 
+  #recognition-pile
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+
+    canvas
+      position: absolute
+      top: 0px
+      left: 50%
+      height: 100%
+      width: auto
+      transform: translate(-50%, 0)
+
+      @include respond-above($media_768)
+        left: 25%
 
 // ---------------------------------------------
 // Party mode
