--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -64,18 +64,6 @@
 
       transition: opacity $speed $ease_in
 
-      &.show
-        opacity: 1
-
-        transition: opacity $speed $ease_out
-
-      @media all and (max-aspect-ratio: 1/1)
-        background-position: 90% bottom
-        background-size: cover
-        
-        &.show
-          opacity: 0.1
-
     // ---------------------------------------------
     // Shared styles: Meta zone
     // ---------------------------------------------
@@ -111,3 +99,15 @@
       @include respond-above($media_1180)
         left: 100px
         right: 100px
+
+  &.active
+    .slide-inner
+      .picture-zone
+        opacity: 1
+
+        transition: opacity $speed $ease_out
+
+        @media all and (max-aspect-ratio: 1/1)
+          background-position: 72% bottom
+          background-size: cover
+          opacity: 0.1
